# club

./: .claude.yaml  .cursorrules  .gitignore  .railwayignore  AUTHENTICATION_VALIDATION_STATUS.md  BACKUP_INSTRUCTIONS.md  CLAUDE.md  CONTRIBUTING.md  CORRECCIONES_APLICADAS.md  DEPLOY_NOW.md  LIMPIEZA_COMPLETADA.md  ORGANIZACION_CLUB_RELACION.md  PLAN_CORRECCION_DETALLADO.md  RENDER_SETTINGS.md  TESTS_SETUP_COMPLETED.md  analyze_project_versions.py  check-railway-projects.py  check_signals.py  comandos-inicio.txt  comprehensive_e2e_test_script.py  disable_signals_temporarily.py  e2e_test_report_1755116280.json  fix-production-club-id.py  login_routes_analysis_1755116323.json  postgresql-setup-guide.md  production_audit.py  production_readiness_audit.py  railway-deploy-commands.txt  railway-env-vars.txt  railway-mcp-config.json  railway-production-vars.txt  render.yaml  run_render_migrations.py  setup-production-db.py  test-clubs-functionality.js  test-postgres-connection.py  verify-deployment.js
backend/: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .railwayignore  BACKEND_COMPLETION_WORKPLAN.md  BFF_OPTIMIZATIONS_README.md  CAPTCHA_SETUP.md  DJANGO_BACKEND_ARCHITECTURE_ANALYSIS.md  MIGRATION_CHECKLIST.md  MIGRATION_TO_BEST_PRACTICES.md  MODEL_CONFLICT_RESOLUTION.md  Makefile  PADELYZER_FIT_GAPS_ANALYSIS.md  PYTHON_BEST_PRACTICES_REVIEW.md  README.md  README_RECOVERY.md  RECAPTCHA_SETUP.md  ROOT_MODULE_ANALYSIS.md  advanced_integration_tests.py  analisis_modulo_clubes.py  analyze_clients_module.py  analyze_project_status.py  apply_payment_fixes.py  apply_reservation_fixes.py  assign_user_to_club.py  auth_python312_validation_report.json  backend_completion_analysis.py  bootstrap_migrations.py  bypass_django.py  check_admin_users.py  check_club_users.py  check_clubs.py  check_django.py  check_integrations.py  check_models_structure.py  check_reservation_fields.py  check_reservation_schema.py  check_root_urls.py  check_tournaments_status.py  (+103 more)
backend/apps/authentication/: admin.py  apps.py  authentication.py  backends.py  claude.md  middleware.py  models.py  serializers.py  services.py  services_typed.py  signals_auto_org.py  spectacular_extensions.py  tasks.py  tests.py  urls.py  urls_optimized.py  views.py  views_optimized.py
backend/apps/bi/: README.md  admin.py  apps.py  cache.py  claude.md  models.py  optimizations.py  serializers.py  services.py  urls.py  urls_optimized.py  views.py  views_optimized.py
backend/apps/classes/: API_DOCUMENTATION.md  README.md  admin.py  claude.md  models.py  serializers.py  urls.py  views.py
backend/apps/clients/: admin.py  apps.py  claude.md  managers.py  mixins.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/apps/clubs/: CRITICAL_PATHS.md  DEPENDENCIES.md  admin.py  apps.py  circuit_breakers.py  claude.md  court_actions.py  health.py  image_views.py  mixins.py  models.py  optimizations.py  serializers.py  signals.py  tests_single.py  urls.py  validators.py  views.py
backend/apps/finance/: CRITICAL_PATHS.md  DEPENDENCIES.md  admin.py  apps.py  circuit_breakers.py  claude.md  health.py  mixins.py  models.py  reports.py  revenue_views.py  serializers.py  services.py  signals.py  urls.py  validators.py  views.py  webhooks.py
backend/apps/health/: urls.py  views.py
backend/apps/leagues/: CRITICAL_PATHS.md  DEPENDENCIES.md  admin.py  apps.py  circuit_breakers.py  claude.md  health.py  mixins.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
backend/apps/management/: claude.md  urls.py  views.py
backend/apps/notifications/: admin.py  apps.py  claude.md  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/apps/reservations/: CRITICAL_PATHS.md  DEPENDENCIES.md  admin.py  circuit_breakers.py  claude.md  health.py  mixins.py  models.py  models_updated.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/apps/root/: admin.py  apps.py  claude.md  models.py  serializers.py  urls.py  views.py
backend/apps/shared/: business_validators.py  claude.md  data_integrity.py  decorators.py  health_check.py  middleware.py  monitoring.py  pagination.py  validators.py  views.py
backend/apps/tournaments/: CRITICAL_PATHS.md  DEPENDENCIES.md  LEAGUE_SCHEDULING_API.md  README.md  admin.py  api_documentation.md  (+16 more)
backend/config/: asgi.py  routers.py  urls.py  wsgi.py
backend/core/: admin.py  cache_utils.py  cached_views.py  exceptions.py  image_utils.py  mixins.py  models.py  pagination.py  permissions.py  query_optimizations.py  services.py  utils.py  utils_typed.py
backend/docs/: DEVELOPMENT_WORKFLOW.md
backend/fixtures/: sample_data.json
backend/middleware/: bff_performance.py
backend/migrations/: 0001_add_bff_indexes.py
backend/performance_tests/: __init__.py  db_performance.py  kpi_tracker.py  locustfile.py  optimizations.py  run_performance_tests.py  run_tests.py  scenarios.yaml
backend/requirements/: base.txt  development.txt  local.txt  production.txt  temp.txt
backend/scripts/: apply_query_optimizations.py  migrate_to_best_practices.py  quick_migration_status.py  reorganize_project.py
backend/tests/: __init__.py  conftest.py  factories.py  test_auth_secure_example.py  test_auth_security.py  test_bff_views.py  test_business_validators.py  test_clients_complete.py  test_fix1_client_corrections.py  test_fix2_reservation_corrections.py  test_fix3_payment_implementation.py  test_fix4_revenue_integration.py  test_fix5_business_validations.py  test_integration.py  test_integration_all_fixes.py  test_new_endpoints.py  test_payments_complete.py  test_performance.py  test_reservations_complete.py  test_security.py  test_utils_typed.py
backend/utils/: bff_cache.py
(+1124 files in other folders)
