[metadata]
name = padelyzer-backend
version = 1.0.0
description = Backend for Padelyzer - Padel Club Management System
long_description = file: README.md
long_description_content_type = text/markdown
author = Padelyzer Team
author_email = team@padelyzer.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires = file: requirements/base.txt

[options.packages.find]
exclude =
    tests*
    testing*
    docs*
    scripts*

[tool:pytest]
DJANGO_SETTINGS_MODULE = config.settings.development
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
testpaths = tests apps
addopts = 
    --strict-markers
    --tb=short
    --cov=apps
    --cov-branch
    --cov-report=term-missing:skip-covered
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=80

[coverage:run]
source = apps
omit = 
    */migrations/*
    */tests/*
    */test_*.py
    */__init__.py
    */admin.py
    */apps.py

[coverage:report]
precision = 2
skip_empty = True
show_missing = True

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
plugins = mypy_django_plugin.main

[mypy-*.migrations.*]
ignore_errors = True

[mypy-*.tests.*]
ignore_errors = True